--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -40,3 +40,27 @@
 	#banner-wrapper .inner {
 		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
 	}
+        
+  /* Carousel */
+
+	.carousel .forward, .carousel .backward {
+		border-radius: 100%;
+		background-color: #483949;
+		width: 7em;
+		height: 7em;
+		margin-top: -3.5em;
+		border-radius: 100%;
+		-ms-behavior: url("assets/js/ie/PIE.htc");
+	}
+
+		.carousel .forward:before, .carousel .backward:before {
+			display: none;
+		}
+
+	.carousel .forward {
+		right: -3.5em;
+	}
+
+	.carousel .backward {
+		left: -3.5em;
+	}
