--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1669,7 +1669,8 @@ cursor:pointer;
 		position: relative;
 		border-bottom: solid 2px #FE1B48;
 		box-shadow: inset 0px -8px 0px 0px #fff, inset 0px -10px 0px 0px #000;
-                height: 480px;
+                margin-top: 105px;
+                height: 650px;
 	}
 
 		#header h1 {
@@ -1752,8 +1753,8 @@ width: 105px;
 
 			#nav > ul > li > a:before {
 				display: inline-block;
-				background: black;
-				color: #FE1B48;
+				background: #a3a3a3;
+				color: #b53b53;
 				width: 1.65em;
 				height: 1.5em;
 				border-radius: 1.65em;
@@ -1971,7 +1972,7 @@ width: 105px;
 					}
 
 						#nav > ul > li > a > span {
-							font-size: 0.85em;
+							font-size: 12px;
 							letter-spacing: 3px;
 						}
 
@@ -2205,7 +2206,7 @@ width: 105px;
 /* Mobile */
 
 	#navPanel, #titleBar {
-		display: none;
+
 	}
 
 	@media screen and (max-width: 736px) {
@@ -2288,7 +2289,7 @@ width: 105px;
 				padding: 0 !important;
 				margin: 0 0 0.5em 0 !important;
 			}
-
+                        
 		/* Box */
 
 			.box.excerpt .date {
@@ -2368,7 +2369,7 @@ width: 105px;
 						opacity: 0.5;
 					}
 /*menu movil*/
-			#navPanel {
+			#navPanel {                                               
 				-moz-backface-visibility: hidden;
 				-webkit-backface-visibility: hidden;
 				-ms-backface-visibility: hidden;
@@ -2395,7 +2396,7 @@ width: 105px;
 				text-transform: uppercase;
 				color: #FE1B48;
 				letter-spacing: 2px;
-				font-size: 0.85em;
+				font-size: 12px;
 			}
                         
 				#navPanel .link {
@@ -2417,8 +2418,8 @@ width: 105px;
 						font-weight: 600;
 						color: #FE1B48;
 					}
-
-				#navPanel .indent-1 {
+                                        
+                                      #navPanel .indent-1 {
 					display: inline-block;
 					width: 1em;
 				}
@@ -2447,13 +2448,18 @@ width: 105px;
 					color: #fff;
 				}
                                 
-                                #navPanel .icons {
-				margin: 0 0 2em 0 !important;
+                                #navPanel > ul > li > a{
+                                    color: pink;
+                                    display: inline-block;
+                                    font-family: FontAwesome;
+                                    font-size: 16px;
+                                    line-height: 0.5em;
+                                    margin-right: 15px;
                                 }
+                                
+                                
 
-				#navPanel .icons:last-child {
-					margin-bottom: 0;
-				}
+
 
 			body.navPanel-visible #page-wrapper {
 				-moz-transform: translateX(275px);
