--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1426,11 +1426,11 @@
 /* Table */
 
 	table {
-		width: 100%;
+		width: 50%;
                 text-align: center;
-                margin: 0 auto;
-       text-align: center;
-       font-weight: bold;
+                margin: auto;       
+       font-size: 20px;
+       
 	}
         
         tr.spac td {
@@ -1453,7 +1453,7 @@ box-shadow: 0px 0px 3px #Ff0033; /* Sombra */
 -o-transition: all 1s;
 cursor:pointer;
 color: #Ff0033;
-font-weight: bold;
+
 }
 
 		table.default {
@@ -1762,7 +1762,7 @@ cursor:pointer;
 
       /*menu fijo*/          
 #top {
-	background-color: #FFF;
+	background-color: #F6CED8;
 	box-shadow: 0px 2px 2px #FE1B48;
 	height: 100px;
 	left: 0px;
