--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1760,9 +1760,9 @@ cursor:pointer;
                         width: 30%;
                 }
 
-      /*menu fijo*/          
+      /*menu fijo #F6CED8*/          
 #top {
-	background-color: #F6CED8;
+	background-color: #fff;
 	box-shadow: 0px 2px 2px #FE1B48;
 	height: 100px;
 	left: 0px;
