modficacion de imagenes responsive(aun con fallas en movil), cambios en servicios y header no fijo en movil

--- a/assets/css/glide.theme.css
+++ b/assets/css/glide.theme.css
@@ -105,7 +105,7 @@
 }
 .glide__bullets > *:hover,
 .glide__bullets > *:focus {
-  border: 2px solid #e5e5e5;
+  border: 2px solid #FE1B48;
   background-color : #FE1B48;
   
 }
