--- a/assets/css/glide.core.css
+++ b/assets/css/glide.core.css
@@ -1,7 +1,8 @@
 .glide {
   position: relative;
-  width: 100%;
+  width: 100% !important;
   height: 100%;
+  margin-top: 85px !important;
 }
 .glide__wrapper {
   overflow: hidden;
@@ -75,6 +76,7 @@
   clear: none;
 }
 .glide--slideshow .glide__wrapper {
+  width: 100%;
   height: 100%;
 }
 .glide--slideshow .glide__slide {
