--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,7 +28,7 @@
 
 	ol, ul {
 		list-style: none;
-                margin-left: 50px;
+                margin-left: 0;
 	}
 
 	blockquote, q {
@@ -1701,8 +1701,8 @@ cursor:pointer;
 		overflow: hidden;
 		background: #fff;
                 height: 650px;
-                border-bottom: solid 2px #FE1B48;                 
-		box-shadow: inset 0px -8px 0px 0px #fff, inset 0px -10px 0px 0px #000;                
+                border-bottom: solid 1px #000;
+		box-shadow: 0px 4px 4px #FE1B48;              
 	}
 
 	#footer-wrapper {
@@ -1738,9 +1738,10 @@ cursor:pointer;
 	#header {
 		position: relative;
 		border-bottom: solid 2px #FE1B48;
-		box-shadow: inset 0px -8px 0px 0px #fff, inset 0px -10px 0px 0px #000;                
+		box-shadow: 0px 2px 2px #000;             
                 height: 700px;
                 width: 100%;                
+                z-index: 1000;
 	}
 
 		#header h1 {
@@ -1774,7 +1775,7 @@ cursor:pointer;
 	background-color: #fff;
 	box-shadow: 0px 2px 2px #FE1B48;
 	height: 100px;
-	left: 0px;
+
 	position: fixed;
 	top: 0;
 	width: 100%;
@@ -2458,16 +2459,16 @@ width: 105px;
 						display: block;
 						width: 60px;
 						height: 40px;
-						background: rgba(232, 232, 232, 0.9);
+						background: #FE1B48;
 						border-radius: 4px;
 						position: absolute;
 						left: 5px;
 						top: 5px;
-						box-shadow: 0.125em 0.125em 0 0 rgba(0, 0, 0, 0.15);
+						box-shadow: 0.125em 0.125em 0 0 #3c3c3c;
 						text-align: center;
 						line-height: 40px;
 						font-size: 18px;
-						color: black;
+						color: #fff;
 					}
 
 					#titleBar .toggle:active:before {
@@ -2491,7 +2492,7 @@ width: 105px;
 				height: 100%;
 				left: 0;
 				overflow-y: auto;
-				position: absolute;                               
+				position: fixed;                               
 				top: 0;
 				width: 275px;
 				z-index: 10002;
