--- a/assets/css/glide.core.css
+++ b/assets/css/glide.core.css
@@ -1,8 +1,8 @@
 .glide {
   position: relative;
-  width: 100% !important;
+  width: 100% ;
   height: 100%;
-  margin-top: 85px !important;
+  
 }
 .glide__wrapper {
   overflow: hidden;
