--- a/assets/css/glide.theme.css
+++ b/assets/css/glide.theme.css
@@ -14,14 +14,14 @@
 .glide__arrow {
   position: absolute;
   z-index: 2;
-  color: white;
+  color: #FE1B48;
   text-transform: uppercase;
   font: 11px Arial, sans-serif;
   padding: 9px 12px;
-  background-color: transparent;
+  background-color: #FE1B48;
   border: 2px solid rgba(255, 255, 255, 0.5);
   border-radius: 4px;
-  opacity: 1;
+  opacity: 5;
   -webkit-transition: opacity 150ms ease, border 300ms ease-in-out;
           transition: opacity 150ms ease, border 300ms ease-in-out;
 }
@@ -32,7 +32,8 @@
   outline: none;
 }
 .glide__arrow:hover {
-  border-color: white;
+  border-color: #FE1B48;
+  font-weight: bold;
 }
 .glide--horizontal .glide__arrow {
   -webkit-transform: translateY(-50%);
@@ -62,7 +63,7 @@
   list-style: none;
 }
 .glide--horizontal .glide__bullets {
-  bottom: 8%;
+  bottom: -8%;
   left: 0;
   width: 100%;
   height: 12px;
@@ -79,7 +80,7 @@
 }
 .glide__bullets > * {
   display: inline-block;
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: #3c3c3c;
   width: 12px;
   height: 12px;
   padding: 0;
@@ -111,5 +112,5 @@
 }
 
 .glide__bullets > *:before{
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: #3c3c3c;
 }
